split Makefile into centos.makefile.mk opensuse.makefile.mk

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
+
+opensuse.1*
+opensuse.2*
+opensuse.3*
+opensuse.4*
+opensuse.5*
+opensuse.6*
+opensuse.7*
+opensuse.8*
+opensuse.9*
+centos.1*
+centos.2*
+centos.3*
+centos.4*
+centos.5*
+centos.6*
+centos.7*
+centos.8*
+centos.9*
 tmp
-leap-*
-centos-*
 *.tmp
