use IMAGESREPO = localhost:5000/mirror-packages

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-
-opensuse.1*
-opensuse.2*
-opensuse.3*
-opensuse.4*
-opensuse.5*
-opensuse.6*
-opensuse.7*
-opensuse.8*
-opensuse.9*
 centos.1*
 centos.2*
 centos.3*
@@ -17,5 +7,23 @@ centos.6*
 centos.7*
 centos.8*
 centos.9*
+opensuse.1*
+opensuse.2*
+opensuse.3*
+opensuse.4*
+opensuse.5*
+opensuse.6*
+opensuse.7*
+opensuse.8*
+opensuse.9*
+ubuntu.1*
+ubuntu.2*
+ubuntu.3*
+ubuntu.4*
+ubuntu.5*
+ubuntu.6*
+ubuntu.7*
+ubuntu.8*
+ubuntu.9*
 tmp
 *.tmp
