--- a/roles/docker_distro_packages_mirror/tasks/main.yml
+++ b/roles/docker_distro_packages_mirror/tasks/main.yml
@@ -17,17 +17,21 @@
 - name: distro packages mirror container found
   set_fact:
      distro_packages_mirror_container_found: "{{distro_packages_mirror_container_info.rc == 0}}"
+     distro_packages_mirror_container_running: no
 - name: distro packages mirror container vars
   set_fact:
      distro_packages_mirror_container_vars: "{{distro_packages_mirror_container_info.stdout | from_json }}"
   when: 'distro_packages_mirror_container_found'
+- name: distro packages mirror container status
+  set_fact:
+     distro_packages_mirror_container_running: 'distro_packages_mirror_container_vars[0]["State"]["Status"] not in ["running"]'
+  when: 'distro_packages_mirror_container_found'
 - name: distro packages mirror container not running
-  command: docker rm -f '{{distro_packages_container}}'
-  when: 'distro_packages_mirror_container_vars[0]["State"]["Status"] not in ["running"]'
+  command: docker rm -f '{{distro_packages_mirror_container}}'
+  when: 'distro_packages_mirror_container_found and not distro_packages_mirror_container_running'
 - name: distro packages mirror container need restart
   set_fact:
-     distro_packages_mirror_container_found: no
-  when: 'distro_packages_mirror_container_vars[0]["State"]["Status"] not in ["running"]'
+  when: 'distro_packages_mirror_container_running'
 - name: distro packages mirror container
   command: docker run -d \
     --name '{{distro_packages_mirror_container}}' \
@@ -39,7 +43,7 @@
   when: 'not distro_packages_mirror_container_found'
 - name: distro packages mirror container info
   set_fact:
-    distro_packages_mirror_container_info: distro_packages_mirror_container_info2
+    distro_packages_mirror_container_info: "{{ distro_packages_mirror_container_info2 }}"
   when: 'not distro_packages_mirror_container_found'
 - name: distro packages mirror container vars
   set_fact:
