--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 
 [metadata]
 name = docker-mirror-packages-repo
-version = 1.6.2494
+version = 1.6.2495"
 author = Guido U. Draheim
 author-email = Guido.Draheim@gmx.de
 home-page = https://www.linkedin.com/in/gdraheim/
