--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -29,6 +29,9 @@ jobs:
     - name: 'install python3 mypy'
       run: |
         sudo apt-get install --fix-broken --ignore-missing python3-typed-ast mypy
+    - name: 'find socketserver'
+      run: |
+         find /usr/lib -name socketserver.pyi
     - name: 'show mypy directories'
       run: |
         find . -type d
