patch socketserver.pyi

--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -36,6 +36,7 @@ jobs:
           case "$filename" in */six/*) sudo rm -v "$filename"
           ;; *) echo "patch $filename"
             sudo sed -i -e "s|RequestHandlerClass:[^()]*BaseRequestHandler.)|RequestHandlerClass: Type[BaseRequestHandler])|" "$filename" || true
+            grep __init__ "$filename" || true
           ;; esac
         done ; }
     - name: 'show mypy directories'
