--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -33,16 +33,16 @@ jobs:
       run: |
         find /usr/lib -name typeshed | { while read basedirectory
         do
-          grep TCPServer $basedirectory/*.pyi $basedirectory/*/*.pyi $basedirectory/*/*/*.pyi $basedirectory/*/*/*/*.pyi $basedirectory/*/*/*/*/*.pyi
-        done ; }
+          grep TCPServer $basedirectory/*/*/*.pyi $basedirectory/*/*/*/*.pyi $basedirectory/*/*/*/*/*.pyi
+        done ; } || true
         find /usr/lib -name socketserver.pyi | { while read filename
         do
-          case "$filename" in */six/*) sudo rm -v "$filename"
-          ;; *) echo "patch $filename"
-            sudo sed -i -e "s|RequestHandlerClass:[^()]*BaseRequestHandler.)|RequestHandlerClass: Type[BaseRequestHandler])|" "$filename" || true
-            grep __init__ "$filename" || true
-          ;; esac
-        done ; }
+           if grep TCPServer "$filename" ; then
+             echo "patch $filename"
+             sudo sed -i -e "s|RequestHandlerClass:[^()]*BaseRequestHandler.)|RequestHandlerClass: Type[BaseRequestHandler])|" "$filename" || true
+             grep -2 __init__ "$filename" || true
+           fi
+        done ; } || true
     - name: 'show mypy directories'
       run: |
         find . -type d
