--- a/.github/workflows/stylecheck.yml
+++ b/.github/workflows/stylecheck.yml
@@ -12,7 +12,7 @@ jobs:
     name: autopep8 style check
     runs-on: 'ubuntu-latest'
     steps:
-    - name: checkout docker-systemctl-replacement
+    - name: checkout software
       uses: actions/checkout@v2
       with:
         path: software
@@ -22,7 +22,7 @@ jobs:
     - name: 'install python3 autopep8'
       run: |
         sudo apt-get install --fix-broken --ignore-missing python3-autopep8
-    - name: 'make pep (autopep8 style check)'
+    - name: 'make style (autopep8 style check)'
       id: check
       run: |
-        make pep -C software
+        make style -C software
