allow to install as pip package

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,12 +2,40 @@
 
 [metadata]
 name = docker-mirror-packages-repo
-version = 1.6.2495"
+version = 1.6.2495
 author = Guido U. Draheim
 author-email = Guido.Draheim@gmx.de
 home-page = https://www.linkedin.com/in/gdraheim/
 description = allow package installations to stay local at another docker container
+long-description-content-type = text/markdown
 long-description = file: README.md
+
+[options]
+include_package_data=True
+# packages = find_namespace:
+
+scripts =
+  opensuse-mirror.py
+  centos-mirror.py
+  ubuntu-mirror.py
+  docker_mirror.py
+  docker_mirror.pyi
+
+# [options.package_data]
+[options.data_files]
+share/docker_mirror/support =
+   SUPPORTED.md
+   README.md
+   dockerdir.py
+   dockerdir.pyi
+share/docker_mirror/scripts =
+   scripts/filelist.py
+   scripts/filelist.pyi
+   scripts/mirrorlist.py
+   scripts/mirrorlist.pyi
+   scripts/mirrors.fedoraproject.org.py
+   scripts/mirrors.fedoraproject.org.pyi
+   scripts/repodata-fix.py
 
 [pycodestyle]
 max-line-length = 188 
