--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ name = docker-mirror-packages-repo
 version = 1.6.2495
 author = Guido U. Draheim
 author-email = Guido.Draheim@gmx.de
+license = CC0
 home-page = https://www.linkedin.com/in/gdraheim/
 description = allow package installations to stay local at another docker container
 long-description-content-type = text/markdown
