rename x-mirror.py -> x-docker-mirror.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,9 @@ include_package_data=True
 # packages = find_namespace:
 
 scripts =
-  opensuse-mirror.py
-  centos-mirror.py
-  ubuntu-mirror.py
+  opensuse-docker-mirror.py
+  centos-docker-mirror.py
+  ubuntu-docker-mirror.py
   docker_mirror.py
   docker_mirror.pyi
 
