--- a/opensuse-mirror-compose.yml
+++ b/opensuse-mirror-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   repo:
-     image: "localhost:5000/opensuse-repo:42.2"
+     image: "localhost:5000/mirror-packages/opensuse-repo:42.2"
      expose: 
       - "80"
      hostname: "opensuse_repo"
