--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ license = CC0
 home-page = https://www.linkedin.com/in/gdraheim/
 description = allow package installations to stay local at another docker container
 long-description-content-type = text/markdown
-long-description = file: README.md
+long-description = file: README
 
 [options]
 include_package_data=True
@@ -27,6 +27,7 @@ scripts =
 share/docker_mirror/support =
    SUPPORTED.md
    README.md
+   README
    dockerdir.py
    dockerdir.pyi
 share/docker_mirror/scripts =
