fix setup.cfg for newest setuptools

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,16 +4,17 @@
 name = docker-mirror-packages-repo
 version = 1.7.6065
 author = Guido U. Draheim
-author-email = Guido.Draheim@gmx.de
+author_email = Guido.Draheim@gmx.de
 license = CC0
-home-page = https://www.linkedin.com/in/gdraheim/
+home_page = https://www.linkedin.com/in/gdraheim/
 description = allow package installations to stay local at another docker container
-long-description-content-type = text/markdown
-long-description = file: README
+long_description_content_type = text/markdown
+long_description = file: README
 
 [options]
 include_package_data=True
 # packages = find_namespace:
+packages = .
 
 scripts =
   opensuse-docker-mirror.py
