--- a/setup.cfg
+++ b/setup.cfg
@@ -69,3 +69,6 @@ disallow_any_unimported = true
 disallow_any_decorated = true
 disallow_any_explicit = true
 warn_unused_configs = true
+
+[pylint.'MESSAGE CONTROL']
+disable = missing-docstring,missing-function-docstring,invalid-name,unspecified-encoding,consider-using-f-string,multiple-statements
